--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,18 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
-trigger:
-- main
+trigger: 
+- master
 
 pool:
-  vmImage: ubuntu-latest
-
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    vmImage: 'ubuntu-latest'
+jobs:
+  - job: BuildAndTest
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec:  '>=6.10.0'
+      displayName: 'Instalacija Node.js packeta na ubunutu mašinu'
+    - script: npm install
+      displayName: 'instaliranje dependencia'
+    - script: npm install
+      displayName: 'Run tests'
+    - script: npm run build
+      displayName: 'Building project'
